--- a/index.html
+++ b/index.html
@@ -41,5 +41,58 @@
                 </div>
             </div>
         </header>
+        <main class="page-main">
+            <section class="shop">
+                <h2 class="visually-hidden">Список товара</h2>
+                <ul class="shop__list">
+                    <li class="shop__item shop__item--site">
+                        <span class="shop__item--image"></span>
+                        <h2>Веб-сайты</h2>
+                        <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                        <a class="order-button button">Заказать</a>
+                    </li>
+                    <li class="shop__item shop__item--app">
+                        <span class="shop__item--image"></span>
+                        <h2>Приложения</h2>
+                        <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+                        <a class="order-button button">Заказать</a>
+                    </li>
+                    <li class="shop__item shop__item--presentation">
+                        <span class="shop__item--image"></span>
+                        <h2>Презентации</h2>
+                        <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+                        <a class="order-button button">Заказать</a>
+                    </li>
+                </ul>
+            </section>
+            <article class="about">
+                <h2 class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
+                <p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+                        превыше креатива. Работаем не покладая рук, как роботы.</p>
+                <h3 class="about__order-title">Выполняем заказы на разработку:</h3>
+                <ul class="advance-list">
+                    <li class="advance-list--item">Веб-сайтов любой сложности</li>
+                    <li class="advance-list--item">Мобильных приложений для iOS и Android</li> 
+                    <li class="advance-list--item">Слайдшоу и видео для корпоративных презентаций</li>
+                </ul>
+                <div class="condition">
+                    <a class="logo-main"><img src="#" width="100" height="50" alt="Логотип"></a>
+                    <h3 class="condition__title">с 2004 года Любим точность во всем:</h3>
+                    <ul class="condition__list">
+                        <li class="condition__list--item">146% Уровень самоотдачи</li>
+                        <li class="condition__list--item">100% Соблюдение сроков</li>
+                        <li class="condition__list--item">50% Минимальная предоплата</li>
+                    </ul>
+                </div>
+                <section class="logo-site">
+                    <ul class="logo-site__list">
+                        <li class="logo-site__list--item"><a class="logo-site__list--htmlacademy"></a></li>
+                        <li class="logo-site__list--item"><a class="logo-site__list--barbershop"></a></li>
+                        <li class="logo-site__list--item"><a class="logo-site__list--pink"></a></li>
+                        <li class="logo-site__list--item"><a class="logo-site__list--mishka"></a></li>
+                    </ul>
+                </section>                
+            </article>
+        </main>
     </body>
 </html>
