--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
                     </ul>
                 </section>                
             </article>
+            <a class="map" href="#">
+                <img src="#" width="100" height="50" alt="Карта">
+            </a>
         </main>
+        <footer class="page-footer">
+            <ul class="social">
+                <li class="social__link"><a class="social__link--vk">Вконтакте</a></li>
+                <li class="social__link"><a class="social__link--face">Фейсбук</a></li>
+                <li class="social__link"><a class="social__link--inst">Инстаграмм</a></li>
+            </ul>
+            <div class="offer">
+                <h3 class="offer__title">Давайте дружить, это выгодно!</h3>
+                <p class="offer__text">Скидка 10% для друзей из социальных сетей.</p>
+            </div>
+        </footer>
     </body>
 </html>
