--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8">
         <title>Nerds</title>
-        <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&amp;subset=cyrillic" rel='stylesheet'
-        type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700&amp;subset=cyrillic" rel="stylesheet"
+        type="text/css">
         <link href="css/style.css" rel="stylesheet">
     </head>
 
@@ -13,7 +13,7 @@
         <header class="page-header">
             <div class="container">
                 <a class="page-header__logo">
-                    <img class="page-header__logo--image" src="#" width="160" height="65" alt="Логотип Вебстудии Nerds">
+                    <img class="page-header__logo--image" src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Вебстудии Nerds">
                 </a>
                 <nav class="main-navigation">            
                     <ul class="main-navigation__list">
