--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
     <body>
         <header class="page-header">
             <div class="container">
-                <nav class="main-navigation">
+                <div class="wrapper-header">
                     <a class="page-header__logo">
-                        <img class="page-header__logo--image" src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Вебстудии Nerds">
-                    </a>                            
-                    <ul class="main-navigation__list">
-                        <li class="main-navigation__list--item"><a href="studio.html">Студия</a></li>
-                        <li class="main-navigation__list--item"><a href="clients.html">Клиенты</a></li>
-                        <li class="main-navigation__list--item"><a href="shop.html">Магазин</a></li>
-                        <li class="main-navigation__list--item"><a href="contacts.html">Контакты</a></li>
-                        <li class="main-navigation__list--item"><a href="shop-cart.html">Корзина</a></li>
-                    </ul>
-                </nav>
+                        <img class="page-header__logo--image" src="img/nerds-logo.svg" width="160" height="65"
+                            alt="Логотип Вебстудии Nerds">
+                    </a>
+                    <nav class="main-navigation">
+                        <a class="main-navigation__list--item" href="studio.html">Студия</a>
+                        <a class="main-navigation__list--item" href="clients.html">Клиенты</a>
+                        <a class="main-navigation__list--item" href="shop.html">Магазин</a>
+                        <a class="main-navigation__list--item" href="contacts.html">Контакты</a>
+                        <a class="main-navigation__list--item" href="shop-cart.html">Корзина</a>
+                    </nav>
+                </div>
                 <section class="features">
                     <h1>Долго, дорого, скурпулезно</h1>
                     <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
