начал делать слайдер

--- a/index.html
+++ b/index.html
@@ -25,15 +25,28 @@
                         <a class="main-navigation__list--item" href="shop-cart.html">Корзина</a>
                     </nav>
                 </div>
-                <section class="features">
-                    <h1>Долго, дорого, скурпулезно</h1>
-                    <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+                <div class="features slide">
+                    <h1>Долго, дорого, скурпулезно.</h1>
+                    <p>Математически выверенный дизайн<br>
+                         для вашего сайта или мобильного приложения.</p>
                     <a class="features__button button" href="#">Узнать больше</a>
-                </section>
+                </div>
+                <div class="features slide">
+                    <h1>Любим математику как никто другой.</h1>
+                    <p>Никакого креатива, только математические формулы 
+                        для расчета идеальных пропорций.</p>
+                    <a class="features__button button" href="#">Узнать больше</a>
+                </div>
+                <div class="features slide">
+                    <h1>Только ночь, только хардкор</h1>
+                    <p>Работать днем, как все? Мы против этого.
+                        Ближе к полуночи работа только начинается.</p>
+                    <a class="features__button button" href="#">Узнать больше</a>
+                </div>
                 <div class="slider-list slider">
-                    <label class="slider-list__item slide"></label >
-                    <label  class="slider-list__item slide"></label >
-                    <label  class="slider-list__item slide"></label >
+                    <label class="slider-list__item"></label >
+                    <label  class="slider-list__item"></label >
+                    <label  class="slider-list__item"></label >
                 </div>
                 <div class="slider-toggles">
                     <input type="radio" name="slider-toggle">
