--- a/index.html
+++ b/index.html
@@ -25,34 +25,36 @@
                         <a class="main-navigation__list--item" href="shop-cart.html">Корзина</a>
                     </nav>
                 </div>
-                <div class="features slide">
-                    <h1>Долго, дорого, скурпулезно.</h1>
-                    <p>Математически выверенный дизайн<br>
-                         для вашего сайта или мобильного приложения.</p>
-                    <a class="features__button button" href="#">Узнать больше</a>
-                </div>
-                <div class="features slide">
-                    <h1>Любим математику как никто другой.</h1>
-                    <p>Никакого креатива, только математические формулы 
-                        для расчета идеальных пропорций.</p>
-                    <a class="features__button button" href="#">Узнать больше</a>
-                </div>
-                <div class="features slide">
-                    <h1>Только ночь, только хардкор</h1>
-                    <p>Работать днем, как все? Мы против этого.
-                        Ближе к полуночи работа только начинается.</p>
-                    <a class="features__button button" href="#">Узнать больше</a>
-                </div>
-                <div class="slider-list slider">
-                    <label class="slider-list__item"></label >
-                    <label  class="slider-list__item"></label >
-                    <label  class="slider-list__item"></label >
-                </div>
-                <div class="slider-toggles">
-                    <input type="radio" name="slider-toggle">
-                    <input type="radio" name="slider-toggle">
-                    <input type="radio" name="slider-toggle">
-                </div>
+                <section class="slider">
+                    <div class="container">
+                        <h2 class="visually-hidden">Преимущества</h2>
+                        <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+                        <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+                        <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+                        <div class="slider-controls">
+                            <label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
+                            <label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
+                            <label class="slider-controls-item slider-controls-item--3" for="product-3">Третий</label>
+                        </div>
+                        <ul class="slider-list">
+                            <li class="slider-item">
+                                <h3>Долго, дорого,<br> скрупулезно.</h3>
+                                <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+                                <a class="slider-item-button button" href="#">Узнать больше</a>
+                            </li>
+                            <li class="slider-item">
+                                <h3>Любим математику как никто другой</h3>
+                                <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+                                <a class="slider-item-button button" href="#">Узнать больше</a>
+                            </li>
+                            <li class="slider-item">
+                                <h3>Только ночь,<br> только хардкор</h3>
+                                <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+                                <a class="slider-item-button button" href="#">Узнать больше</a>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
             </div>
         </header>
         <main class="page-main">
