--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </section>
             </div>
         </header>
-        <main class="page-main">
+        <main class="page-main container">
             <section class="shop">
                 <h2 class="visually-hidden">Список товара</h2>
                 <ul class="shop__list">
