--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
         <main class="page-main container">
             <section class="shop">
                 <h2 class="visually-hidden">Список товара</h2>
-                <ul class="shop__list">
+                <ul class="shop__list container">
                     <li class="shop__item shop__item--site">
-                        <span class="shop__item--image"></span>
+                        <div class="shop__item--image"></div>
                         <h2>Веб-сайты</h2>
                         <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
                         <a class="order-button button">Заказать</a>
                     </li>
                     <li class="shop__item shop__item--app">
-                        <span class="shop__item--image"></span>
+                        <div class="shop__item--image"></div>
                         <h2>Приложения</h2>
                         <p>Покорите топ-10 приложений в AppStore и Google Play</p>
                         <a class="order-button button">Заказать</a>
                     </li>
                     <li class="shop__item shop__item--presentation">
-                        <span class="shop__item--image"></span>
+                        <div class="shop__item--image"></div>
                         <h2>Презентации</h2>
                         <p>Вы даже не подозреваете, насколько вы изумительны!</p>
                         <a class="order-button button">Заказать</a>
