--- a/index.html
+++ b/index.html
@@ -79,18 +79,20 @@
                     </li>
                 </ul>
             </section>
-            <article class="about">
-                <h2 class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
-                <p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+            <article class="about contaner">
+                <div class="about-container">
+                    <h2 class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
+                    <p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
                         превыше креатива. Работаем не покладая рук, как роботы.</p>
-                <h3 class="about__order-title">Выполняем заказы на разработку:</h3>
-                <ul class="advance-list">
-                    <li class="advance-list--item">Веб-сайтов любой сложности</li>
-                    <li class="advance-list--item">Мобильных приложений для iOS и Android</li> 
-                    <li class="advance-list--item">Слайдшоу и видео для корпоративных презентаций</li>
-                </ul>
+                    <h3 class="about__order-title">Выполняем заказы на разработку:</h3>
+                    <ul class="advance-list">
+                        <li class="advance-list--item">Веб-сайтов любой сложности</li>
+                        <li class="advance-list--item">Мобильных приложений для iOS и Android</li>
+                        <li class="advance-list--item">Слайдшоу и видео для корпоративных презентаций</li>
+                    </ul>
+                </div>
                 <div class="condition">
-                    <a class="logo-main"><img src="#" width="100" height="50" alt="Логотип"></a>
+                    <a class="logo-main"><img src="../nerds/img/nerds-illustration.jpg" width="360" height="208" alt="Логотип"></a>
                     <h3 class="condition__title">с 2004 года Любим точность во всем:</h3>
                     <ul class="condition__list">
                         <li class="condition__list--item">146% Уровень самоотдачи</li>
@@ -98,15 +100,15 @@
                         <li class="condition__list--item">50% Минимальная предоплата</li>
                     </ul>
                 </div>
-                <section class="logo-site">
-                    <ul class="logo-site__list">
-                        <li class="logo-site__list--item"><a class="logo-site__list--htmlacademy"></a></li>
-                        <li class="logo-site__list--item"><a class="logo-site__list--barbershop"></a></li>
-                        <li class="logo-site__list--item"><a class="logo-site__list--pink"></a></li>
-                        <li class="logo-site__list--item"><a class="logo-site__list--mishka"></a></li>
-                    </ul>
-                </section>                
             </article>
+            <section class="logo-site">
+                <ul class="logo-site__list">
+                    <li class="logo-site__list--item"><a class="logo-site__list--htmlacademy"></a></li>
+                    <li class="logo-site__list--item"><a class="logo-site__list--barbershop"></a></li>
+                    <li class="logo-site__list--item"><a class="logo-site__list--pink"></a></li>
+                    <li class="logo-site__list--item"><a class="logo-site__list--mishka"></a></li>
+                </ul>
+            </section>
             <a class="map" href="#">
                 <img src="#" width="100" height="50" alt="Карта">
             </a>
