--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                     </li>
                 </ul>
             </section>
-            <article class="about contaner">
-                <div class="about-container">
+            <article class="about">
+                <div class="about-block">
                     <h2 class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
                     <p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
                         превыше креатива. Работаем не покладая рук, как роботы.</p>
