--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                     <a class="logo-main"><img src="../nerds/img/nerds-illustration.jpg" width="360" height="208" alt="Логотип"></a>
                     <h3 class="condition__title">с 2004 года Любим точность во всем:</h3>
                     <ul class="condition__list">
-                        <li class="condition__list--item">146% Уровень самоотдачи</li>
-                        <li class="condition__list--item">100% Соблюдение сроков</li>
-                        <li class="condition__list--item">50% Минимальная предоплата</li>
+                        <li class="condition__list--item"><b>146%</b> Уровень самоотдачи</li>
+                        <li class="condition__list--item"><b>100%</b> Соблюдение сроков</li>
+                        <li class="condition__list--item"><b>0%</b> Минимальная предоплата</li>
                     </ul>
                 </div>
             </article>
